# Sponsio

./: .gitignore  BENCHMARKS.md  BRAND.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  OSS_PROMISE.md  QUICKSTART.md  README.ja.md  README.md  README.zh-CN.md  SECURITY.md  VERSIONING.md  llms-full.txt  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  codeql-config.yml  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  scorecard.yml
api/: db.py  main.py  schemas.py  state.py  trace_adapter.py  trace_store.py
api/routers/: agents.py  analytics.py  contracts.py  demo.py  discovery.py  leaderboard.py  monitor.py  otel_ingest.py  patterns.py  playground.py  scan.py  score.py
api/static/: leaderboard.html
assets/demos/: backup_delete_cli.tape  backup_delete_without.tape  coding_cleanup_cli.tape  coding_cleanup_without.tape  freeze_violation_cli.tape  freeze_violation_without.tape  loan_fraud_cli.tape  loan_fraud_without.tape  trial_recruiter_cli.tape  trial_recruiter_without.tape  wire_transfer_cli.tape  wire_transfer_without.tape
contracts/: README.md  filesystem.yaml  odcv_bench.yaml  redcode_exec.yaml  runaway.yaml  shell.yaml  universal.yaml
docs/: BENCHMARKS.md  README.md  architecture.md  benchmark-results.md  cli.md  contracts.md  contributing.md  cost-based-thresholds.md  faq.md  formal-methods.md  getting-started.md  index.md  input-formats.md  integrations.md  oss_scope.md  owasp-agentic-top-10.md  plugins.md  sto-atoms.md  why.md
docs/advanced/: cost-based-thresholds.md
docs/benchmarks/: index.md
docs/concepts/: architecture.md  assume-enforce-semantics.md  contracts.md  formal-methods.md  overview.md  owasp-coverage.md  stochastic.md
docs/getting-started/: first-contract.md  install.md  onboard-prompt.md  quickstart.md
docs/guides/: contract-sources.md  faq.md  observe-vs-enforce.md  onboarding.md  reporting.md
docs/integrations/: index.md  openclaw.md
docs/internal/: contract-activate-at.md  shield-trace-persistence.md  skill-manual-verification.md
docs/reference/: benchmark-libraries.md  benchmarks.md  cli.md  config-yaml.md  contract-lib.md  observability.md  oss-scope.md  patterns.md  sto-atoms.md  ts-sdk-parity.md
docs/release-notes/: v0.2.0a0.md  v0.2.0a1.md  v0.2.0a2.md  v0.2.0a3.md
examples/: scan_test_agent.py  scan_test_agent_run.py  sponsio.yaml
examples/demo/: README.md  demo_backup_delete.py  demo_coding_agent.py  demo_coding_cleanup.py  demo_customer_service.py  demo_freeze_violation.py  demo_loan_fraud.py  demo_mcp_github_heist.py  demo_mcp_leak.py  demo_pattern_coverage.py  demo_showcase.py  demo_trial_recruiter.py  demo_walkthrough.py  demo_wire_transfer.py
examples/integrations/: README.md
plugins/sponsio-claude-code/: QUICKSTART.md  README.md
plugins/sponsio-openclaw/: QUICKSTART.md  README.md  install_into_running_openclaw.sh  openclaw.plugin.json  package-lock.json  package.json
plugins/sponsio-openclaw-shield/: QUICKSTART.md  README.md  openclaw.plugin.json  package-lock.json  package.json
plugins/sponsio-shield/: QUICKSTART.md  README.md
scripts/: README.md  bench_verifier.py  build_llms_txt.py  check-ts-parity.sh  sync-ts-mirror.sh  validate_dfa_backend.py  verify_v0_2.py
skills/sponsio/: SKILL.md
sponsio/: __init__.py  agents.py  claude_agent.py  cli.py  config.py  contract.py  core.py  crewai.py  doctor.py  guard_stdin.py  init_wizard.py  langgraph.py  onboard.py  onboard_apply.py  onboard_setup.py  openai.py  refresh.py  vercel_ai.py
sponsio/cli/: __init__.py  __main__.py  _monolith.py  _shared.py  app.py
sponsio/daemon/: __init__.py  client.py  handlers.py  protocol.py  server.py
sponsio/demos/: replay.py
sponsio/discovery/: __init__.py  _types.py  loaders.py  starter_pack.py  store.py  trace_replay.py  validation.py
sponsio/formulas/: dfa_evaluator.py  evaluator.py  formula.py  nl_gen.py  parser.py
sponsio/generation/: __init__.py  dsl_to_contract.py  llm_extraction.py  nl_to_contract.py  structured_ir.py
sponsio/integrations/: __init__.py  agents.py  base.py  claude_agent.py  claude_code_install.py  crewai.py  cursor.py  cursor_install.py  google_adk.py  hosts.py  langgraph.py  mcp.py  openai.py  openclaw_install.py  vercel_ai.py
sponsio/models/: agent.py  contract.py  result.py  spans.py  system.py  trace.py
sponsio/patterns/: __init__.py  library.py  soft.py  sto.py  sto_catalog.py  sto_registry.py
sponsio/plugin/: append_ops.py  llm_extraction.py  mcp_introspect.py  scan.py
sponsio/prompts/: __init__.py  onboard.md
sponsio/protocols/: sto.py
sponsio/render/: components.py  derive.py  explain.py  monitor.py  session_view.py  tokens.py
sponsio/reporting/: renderer.py
sponsio/runtime/: __init__.py  calibrator.py  evaluators.py  judge.py  llm_client.py  monitor.py  perf.py  session_log.py  spinner.py  sto_lifting.py  (+3 more)
tests/: conftest.py  test_agents_integration.py  test_api_token_auth.py  test_claude_agent_integration.py  test_claude_code_secret_bypass.py  test_cli_bench.py  test_cli_demo.py  test_cli_mode_patch.py  test_cli_scan_autovalidate.py  test_cli_scan_config.py  test_cli_scan_zero_tools.py  test_cli_skill_install.py  test_cli_validate.py  test_code_analysis.py  test_config.py  test_config_sections.py  test_contract_activate_at.py  test_contract_sto.py  test_core.py  test_ctx_atom.py  test_cursor_hook_protocol.py  test_daemon_ipc.py  test_daemon_plugin_append.py  test_dfa_evaluator.py  test_doctor.py  test_document_extractor.py  test_emit_context_loop.py  test_escalate_notify.py  test_eval_runner.py  test_evaluator.py  test_examples_eval_corpus.py  test_exporters.py  test_extractor_providers.py  test_filter_tools.py  test_finish_session.py  test_grounding.py  test_guard_stdin.py  test_host_migrate.py  test_include_resolution.py  test_init_examples_sync.py  (+81 more)
ts/: README.md  package-lock.json  package.json
ts-scanner/: README.md  package.json
ts-sdk/: package-lock.json  package.json
web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+220 files in other folders)
