[build-system]
requires = ["setuptools>=77.0", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sponsio"
version = "0.1.0a0"
description = "Runtime contract enforcement for LLM agent systems"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Sponsio Contributors"},
]
keywords = [
    "llm",
    "agents",
    "safety",
    "contracts",
    "ltl",
    "runtime-verification",
    "langgraph",
    "mcp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["click>=8.0"]

[project.scripts]
sponsio = "sponsio.cli:main"

[project.urls]
Homepage = "https://github.com/SponsioLabs/Sponsio"
Repository = "https://github.com/SponsioLabs/Sponsio"
Issues = "https://github.com/SponsioLabs/Sponsio/issues"

[project.optional-dependencies]
langgraph = ["langgraph", "langchain-core"]
# openai: OpenAI + any OpenAI-compatible --base-url; google-genai: Gemini
# (``from google import genai``); anthropic: Claude path for scan --llm
llm = ["openai>=1.0", "google-genai", "anthropic"]
crewai = ["crewai"]
agents = ["openai-agents"]
agents-sdk = ["openai-agents"]
claude-agent = ["claude-agent-sdk"]
vercel-ai = ["vercel-ai-sdk"]
web = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "python-multipart>=0.0.6"]
config = ["pyyaml>=6.0"]
pdf = ["pdfplumber>=0.10"]
calibration = ["scikit-learn>=1.3"]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
all = [
    "langgraph", "langchain-core",
    "openai>=1.0",
    "google-genai",
    "anthropic",
    "crewai",
    "openai-agents",
    "claude-agent-sdk",
    "vercel-ai-sdk",
    "fastapi>=0.100", "uvicorn[standard]>=0.20", "python-multipart>=0.0.6",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
    "pyyaml>=6.0",
    "pdfplumber>=0.10",
    "scikit-learn>=1.3",
]

[tool.setuptools.packages.find]
include = ["sponsio*"]

[tool.setuptools.package-data]
sponsio = [
    "py.typed",
    # Bundled scaffolding for `sponsio init --with-example`.
    # Mirror of `examples/eval/` (kept in sync by
    # `scripts/sync_init_examples.py` + `tests/test_init_examples_sync.py`).
    "init_examples/eval/*",
    "init_examples/eval/traces/*",
    # Built-in contract packs resolvable via `include: [sponsio:<spec>]`
    # — see `sponsio.config._resolve_include_spec`.  Layout is
    # ``contracts/<category>/<name>.yaml`` (core / capability / incident).
    "contracts/*/*.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
